--- a/FileTagExporter/Views/FileSelectorView.xaml
+++ b/FileTagExporter/Views/FileSelectorView.xaml
@@ -17,6 +17,7 @@
     <UserControl.Resources>
         <valueConverters:FileTypeValueConverter x:Key="radioBoolToFileTypeConverter"/>
         <valueConverters:OverwriteBehaviorValueConverter x:Key="boolToOverwriteBehavior"/>
+        <valueConverters:FileTypeToVisibilityValueConverter x:Key="fileTypeToVisibility"/>
     </UserControl.Resources>
     <Grid>
         <Grid.RowDefinitions>
@@ -52,7 +53,7 @@
                     </StackPanel>
                 </Button>
             </Grid>
-            <Grid Margin="0 20">
+            <Grid Margin="0 10">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="100"/>
                     <ColumnDefinition Width="*" MinWidth="200"/>
@@ -73,6 +74,11 @@
                                  IsChecked="{Binding Path=OverwriteBehavior, Converter={StaticResource boolToOverwriteBehavior}, ConverterParameter=2}" 
                                  Style="{DynamicResource MaterialDesignRadioButton}" Content="Overwrite Subject"/>
             </StackPanel>
+        </StackPanel>
+        <StackPanel Orientation="Horizontal" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0 0 5 0"
+                        IsEnabled="{Binding IsDirectory}">
+            <ToggleButton Style="{DynamicResource MaterialDesignSwitchToggleButton}" IsChecked="{Binding Path=Recursive}"/>
+            <TextBlock Text="Recursive?" Style="{DynamicResource MaterialDesignCaptionTextBlock}" />
         </StackPanel>
         <Button Grid.Column="2" Grid.Row="1" Margin="5 0 10 0"
                 Visibility="{Binding PathHasValue, Converter={StaticResource BooleanToVisibilityConverter}}"
